--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,15 +1,39 @@
 .container {
-  padding: 0 2rem;
+  /* padding: 0 2rem; */
 }
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  padding-right: 4rem;
+  padding-left: 4rem;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+}
+
+.row {
+  flex-direction: row;
+  display: flex;
+  align-items: center;
+}
+
+.header {
+  display: flex;
+  flex: 1;
+  padding: 2.5rem;
+  align-items: center;
+  box-shadow: rebeccapurple;
+  border-bottom: 1px solid #eaeaea;
+  background-color: #232323;
+  height: 0px;
+  width: 100%;
+}
+
+.input {
+  padding: 0.4rem;
+  height: 30px;
+  width: 300px;
 }
 
 .footer {
@@ -74,22 +98,14 @@
 }
 
 .card {
-  margin: 1rem;
+  margin: 0.5rem;
   padding: 1.5rem;
-  text-align: left;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  width: 100%;
 }
 
 .card h2 {
