--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,8 +4,7 @@
 
 .main {
   min-height: 100vh;
-  padding-right: 4rem;
-  padding-left: 4rem;
+  padding: 2rem;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -23,7 +22,6 @@
   flex: 1;
   padding: 2.5rem;
   align-items: center;
-  box-shadow: rebeccapurple;
   border-bottom: 1px solid #eaeaea;
   background-color: #232323;
   height: 0px;
@@ -33,7 +31,7 @@
 .input {
   padding: 0.4rem;
   height: 30px;
-  width: 300px;
+  width: 320px;
   border-radius: 8px;
   border: 0;
 }
