--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -26,6 +26,9 @@
   background-color: #232323;
   height: 0px;
   width: 100%;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .input {
@@ -64,9 +67,9 @@
 }
 
 .title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+  line-height: 2.15;
+  font-size: 1.8rem;
+  font-weight: 500;
 }
 
 .title,
@@ -75,9 +78,8 @@
 }
 
 .description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
+  margin-left: 4rem;
+  font-size: 1rem;
 }
 
 .code {
